metrics-demo/workloads/ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metrics-demo-ingress
  namespace: metrics-demo
spec:
  ingressClassName: nginx
  rules:
  - host: metrics-demo.labserver
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: metrics-demo
              port:
                number: 8080
